--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://use.typekit.net/kfv6zmf.css" />
-    <title>React App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
+    <title>Gametask</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
