Fixme: adds styles and functions on pages sign and signup

--- a/signin-signup/sign-in.html
+++ b/signin-signup/sign-in.html
@@ -15,7 +15,7 @@
                 </figure>
                 <span class="conta grid">Insira seus dados para fazer login</span>
 
-                <di class="grid">
+                <div class="grid">
                     <div class="form__group field">
                         <input type="email" class="form__input" placeholder="E-mail" name="email" id='txtEmail' required />
                         <label for="email" class="form__label">
